--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    background-color: rgb(175, 175, 201);
+    background-color: rgb(137, 137, 255);
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .container {
-    background-color: yellow;
+    font-size: 2rem;
+    color: white;
+    background-color: rgb(32, 31, 31);
     padding: 1rem;
     border-radius: 0.5rem;
     width: 700px;
@@ -23,7 +25,7 @@ body {
 
 .wpm,
 .wpmLabel {
-    color: rgb(175, 78, 88);
+    color: rgb(63, 64, 63);
     position: absolute;
     top: 6rem;
     font-size: 3rem;
@@ -35,7 +37,7 @@ body {
     position: absolute;
     top: 2rem;
     font-size: 3rem;
-    color: yellow;
+    color: rgb(15, 109, 149);
     font-weight: bold;
 }
 
