--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,6 +13,11 @@ body {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+img{
+    
+    position: absolute;
+    z-index: -2;
+}
 .container {
     font-size: 2rem;
     color: white;
@@ -20,7 +26,7 @@ body {
     border-radius: 0.5rem;
     width: 700px;
     max-width: 90%;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
 }
 
 .wpm,
