--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
 * {
+    margin: 0;
     box-sizing: border-box;
 }
 
-body {
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+head,body {
+    width: 100%;
+    height: 100%;
     margin: 0;
     background-color: rgb(137, 137, 255);
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
+#main{
+    overflow: hidden;
+    width: 100%;
+    padding: 3rem;
+    /* height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    column-gap: 5rem;
+}
 img{
-    
+    width: 100%;
+    height: 100vh;
     position: absolute;
     z-index: -2;
 }
@@ -32,26 +39,33 @@ img{
 .wpm,
 .wpmLabel {
     color: rgb(63, 64, 63);
-    position: absolute;
-    top: 6rem;
+    /* position: absolute; */
+    text-align: center;
     font-size: 3rem;
     font-weight: bold;
 }
-
+.timerDiv, .wpmDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.timer, .wpm{
+    margin-left: 1rem;
+}
 .timer,
 .timerLabel {
-    position: absolute;
-    top: 2rem;
+    text-align: center;
     font-size: 3rem;
     color: rgb(15, 109, 149);
     font-weight: bold;
 }
 
-.timerLabel,
-.wpmLabel {
-    left: 50rem;
-}
 
+.box{
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+}
 .quote-display {
     margin-bottom: 1rem;
     margin-left: calc(1rem + 2px);
@@ -59,7 +73,7 @@ img{
 }
 
 .container-focus {
-    border: 3px solid black;
+    border: 5px solid rgb(5, 87, 146);
 }
 
 .quote-display .correct {
